t711 Fix left nav for assessment on tablet

--- a/eScreeningDashboard/src/main/webapp/resources/css/measuresWIP_new.css
+++ b/eScreeningDashboard/src/main/webapp/resources/css/measuresWIP_new.css
@@ -10,15 +10,25 @@ body {
 /* JH - Focus add 
 a:focus, input:focus, select:focus, .checkSwitch:focus{ 
    outline: none  !important;
-   border-color: #0f3049  !important;
-   box-shadow: 0 0 10px #0f3049 !important;
+   border-color: #9ecaed  !important;
+   box-shadow: 0 0 10px #9ecaed !important;
 }
-*/
+.selectMultiInput:focus{
+  border:3px solid red;
+}
+
+div:focus{
+   outline: none  !important;
+   border-color: #9ecaed !important;
+   box-shadow: 0 0 10px #9ecaed !important;
+}
+
 .selectMultiCheckbox:focus, .checkSwitch:focus{
    outline: none  !important;
-   border-color: #0f3049  !important;
-   box-shadow: 0 0 10px #0f3049 !important;
+   border-color: #9ecaed  !important;
+   box-shadow: 0 0 10px #9ecaed !important;
 }
+ */
 
 #header, #footer {
 	margin-left: -206px; /* LC full width */
@@ -150,7 +160,7 @@ label {
 #measuresProgress li{
 	text-align:left;
 	margin: 32px 0 20px 0px;
-	height: 80px;
+	height: 70px;
 }
 
 #measuresProgress li:hover{
